@@ -1,3 +1,8 @@
+2009-08-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tkUnixSend.c (ServerSecure): [Bug 1909931]: Added some support
+	for server-interpreted access control addreses.
+
 2009-08-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/msgbox.tcl (::tk::MessageBox): Correct bindings so that they
